# agentic-astro

./: CLAUDE.md  README.md  SPRINT-PLAN.md
mario/: .gitignore  README.md  config_simeer.py  create_test_dataset.py  demo_simeer.py  simeer_plugin.py
scabha-analysis/: CRITIQUE.md
stimela-analysis/: ANALYSIS.md  ARCHITECTURE-DECISIONS.md  CRITIQUE.md  IMPLEMENTATION-PLAN.md  STIMELA3-API-DRAFT.md  STIMELA3-PAPER.md  tron-breifast-python.py  tron-pfb-python.py
visfuse/: README.md  RESEARCH.md  TODO.md  demo.py  pyproject.toml
visfuse/src/visfuse/: __init__.py  cli.py  filesystem.py  store.py
visgit/: README.md  RESEARCH.md  TODO.md  pyproject.toml
visgit/src/visgit/: __init__.py  cli.py
